Add Java 12 and more detailed information.