@@ -7,46 +7,82 @@ when selecting and configuring the JVM for Humio.
 
 ## Which JVM?
 
-Humio requires Java 11.  We recommend one of the following excellent and well tested distributions
-of the Java JVM runtime.
+Humio requires a Java version 11 or later JVM to function function properly. At Humio we operate Humio's
+[managed offering](https://cloud.humio.com/) using the Azul provided Zulu JVM version 11.  Our Docker container
+uses this JVM as well.
+
+We recommend you use one of the following excellent and well tested distributions of the Java JVM runtime when operating
+Humio.
 
 ### Java Version 11
 
 | Provider                                             | Name                | Architectures |
 |------------------------------------------------------|---------------------|---------------|
-| [Oracle](https://www.oracle.com/technetwork/java/javase/downloads/jdk11-downloads-5066655.html) | Java SE 11           | x86_64        |
-| [Oracle](https://jdk.java.net/archive/)              | OpenJDK 11          | x86_64        |
 | [Amazon AWS](https://aws.amazon.com/corretto/)       | OpenJDK 11 Corretto | x86_64        |
+| [AdoptOpenJDK.net](https://adoptopenjdk.net/releases.html?variant=openjdk11&jvmVariant=hotspot) | OpenJDK 11 (HotSpot) | x86_64        |
 | [Azul Systems](https://www.azul.com/downloads/zulu/) | OpenJDK 11 Zulu     | x86_64        |
 | [BellSoft](https://bell-sw.com/pages/java-11.0.2)    | OpenJDK 11 Liberica | x86_64, ARMv8 |
-| [AdoptOpenJDK.net](https://adoptopenjdk.net/releases.html?variant=openjdk11&jvmVariant=hotspot) | OpenJDK 11 (HotSpot) | x86_64        |
+| [Oracle](https://www.oracle.com/technetwork/java/javase/downloads/jdk11-downloads-5066655.html) | Java SE 11           | x86_64        |
+| [Oracle](https://jdk.java.net/archive/)              | OpenJDK 11          | x86_64        |
 
+### Java Version 12
 
-At Humio we operate Humio's [hosted offering](https://cloud.humio.com/) using the Azul provided Zulu JVM
-version 11 as it is well tested, maintained and stable OpenJDK distribution.  We are also impressed with the
-BellSoft provided Liberica distribution and are happy to see it support ARMv8 as well as Intel CPUs.
-
+| Provider                                             | Name                | Architectures |
+|------------------------------------------------------|---------------------|---------------|
+| [Azul Systems](https://www.azul.com/downloads/zulu/) | OpenJDK 12 Zulu     | x86_64        |
+| [AdoptOpenJDK.net](https://adoptopenjdk.net/releases.html?variant=openjdk12&jvmVariant=hotspot) | OpenJDK 11 (HotSpot) | x86_64        |
+| [BellSoft](https://bell-sw.com/pages/java-12)        | OpenJDK 12 Liberica | x86_64, ARMv8 |
 
 ## What about...
 
- * Azul Zing - While we haven't tried Zing ourselves our experience with Zulu leads us to believe that it is likely to work and there may be benefits to using their proprietary, commercially supported C4 concurrent, non-generational garbage collector.
- * Oracle Graal - Is an interesting alternative C2 HotSpot JIT and native binary compiler for Java programs and potentially other languages as well.  It is not yet supported for production use with Humio as it is only available for Java version 8.  We plan to investigate and support it as it matures and becomes available for Java 11.
- * Java 12 - We have yet to test and certify Humio on any Java 12 JVM however we plan to do this soon after it becomes generally available.
+ * Azul Zing - While we haven't tried Zing ourselves our experience with Zulu leads us to believe that it is likely to
+ work and there may be benefits to using their proprietary, commercially supported C4 concurrent, non-generational
+ garbage collector.
+ * Graal - Is an interesting alternative C2 HotSpot JIT and native binary compiler for Java programs and
+ potentially other languages as well.  It is not yet supported for production use with Humio as it is only available
+ for Java version 8.  We plan to investigate and support it as it matures and becomes available for Java 11.
+
+## Java Options
+
+We recommend systems running Humio have as much RAM as possible, but not for the JVM.  When running Humio it will
+operate comfortably within 10 GiB for most workloads.  The remainder of your RAM in the system should remain available
+for use as filesystem buffers.
+
+```bash
+-server -Xms10g  -Xmx10g -Xss2M -XX:MaxDirectMemorySize=32G -XX:+AlwaysPreTouch
+```
 
 ## Garbage Collection
 
-Here are some sample configurations.  We have seen good results running the G1 collector in production here shown with a 10GiB heap.
-This configuration works on Java 11.
+Humio has been tested and run using the Garbage First (G1) and the Z collectors.  Both work quite well with our standard
+workload.  The Z collector is now standard in Java 11 and you can enable it with `-XX:+UseZGC`.  This is the collector
+we use in our docker configuration and run on our managed offering.
+
+Regardless of which collector you use we recommend that you configure the JVM for verbose garbage collector logging and
+then store and monitor those logs within Humio itself.
+
 ```bash
-java -server -Xms10g  -Xmx10g -Xss2M -XX:+AlwaysPreTouch -XX:+UseG1GC -XX:+ScavengeBeforeFullGC -XX:+DisableExplicitGC
+-Xlog:gc+jni=debug:file=/var/log/humio/gc.log:time,tags:filecount=5,filesize=102400
+```
+
+It can be helpful to request that the JVM attempt to do a bit of scavenging before stopping the entire JVM for a
+full collection.
+
+```bash
+-XX:+ScavengeBeforeFullGC -XX:+DisableExplicitGC
 ```
 
 At this time we recommend using the Garbage First collector in production (`G1GC`), however as of Java 12 there will be two fully concurrent, non-generational collectors with excellent potential for Humio workloads:
-* [Z Garbage Collector](https://wiki.openjdk.java.net/display/zgc/Main) included with most OpenJDK 11 builds and
-* [ShenandoahGC](https://wiki.openjdk.java.net/display/shenandoah/Main) included on RedHat or available for download [here](https://builds.shipilev.net/openjdk-shenandoah-jdk11/).
 
-To use these collectors replace `-XX:+UseG1GC` with either `-XX:+UseZGC` or `-XX:+UseShenandoahGC` and be sure to include `-XX:+UnlockExperimentalVMOptions`.
+ * [Z Garbage Collector](https://wiki.openjdk.java.net/display/zgc/Main) included with most OpenJDK 11 builds and
+ * [ShenandoahGC](https://wiki.openjdk.java.net/display/shenandoah/Main) included in Liberica, Zulu and on RedHat in Java 12 or for download [here](https://builds.shipilev.net/openjdk-shenandoah-jdk11/) from the team who did the implementation.
+
+To use these collectors replace `-XX:+UseG1GC` with either:
+
+ * `-XX:+UseZGC` or
+ * `-XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC`
 
 ## Helpful Java/JVM Resources
 
-* [Java JVM Options Explorer](https://chriswhocodes.com/hotspot_options_jdk11.html)
+ * [Java JVM Options Explorer](https://chriswhocodes.com/hotspot_options_jdk11.html)
+ * [Java GC Logging options](https://www.slideshare.net/PoonamBajaj5/lets-learn-to-talk-to-gc-logs-in-java-9)
